--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 11:05:21 2018</p>
+         Last Run: Thu Jul 19 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -45,7 +45,7 @@
                         <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>20</td>
+                        <td>23</td>
                         <td>54</td>
                         <td>1</td>
                         <td>11</td>
@@ -62,7 +62,7 @@
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>70</td>
+                        <td>71</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>49</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -187,7 +187,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "55",
-                 "20",
+                 "23",
                  "15",
                  "8"
                ]
@@ -210,8 +210,8 @@
                "data":[
                  "87",
                  "79",
-                 "70",
-                 "49"
+                 "71",
+                 "51"
                ]
              }
            ]
@@ -223,12 +223,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 11:05:21 2018</p>
+         Last Run: Thu Jul 19 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -255,7 +256,7 @@
                         <td>0</td>
                         <td>44</td>
                         <td>3</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SW</td>
                         <td>5</td>
                      </tr>
@@ -268,7 +269,7 @@
                         <td>38</td>
                         <td>4</td>
                         <td>10</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>4</td>
                      </tr>
                      <tr>
@@ -277,9 +278,9 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>32</td>
+                        <td>33</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
                         <td>3</td>
                      </tr>
@@ -291,8 +292,8 @@
                         <td>15</td>
                         <td>29</td>
                         <td>7</td>
-                        <td>11</td>
-                        <td>WSW</td>
+                        <td>13</td>
+                        <td>W</td>
                         <td>35</td>
                      </tr>
                      <tr>
@@ -435,7 +436,7 @@
                "data":[
                  "44",
                  "38",
-                 "32",
+                 "33",
                  "29",
                  "27"
                ]
@@ -466,7 +467,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 11:05:21 2018</p>
+         Last Run: Thu Jul 19 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -491,7 +492,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
@@ -507,19 +508,19 @@
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>19</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>19</td>
                         <td>19</td>
-                        <td>3</td>
+                        <td>2</td>
                         <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                   </tbody>
                </table>
@@ -629,7 +630,7 @@
                "data":[
                  "0",
                  "0",
-                 "3"
+                 "2"
                ]
              },
              {
@@ -637,7 +638,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
+                 "34",
                  "39",
                  "46"
                ]
@@ -648,8 +649,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "19",
-                 "22"
+                 "18",
+                 "21"
                ]
              }
            ]
@@ -666,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 11:05:21 2018</p>
+         Last Run: Thu Jul 19 12:05:11 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -691,11 +692,11 @@
                         <td>25</td>
                         <td>25</td>
                         <td>2</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -715,11 +716,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>4</td>
-                        <td>41</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>36</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -731,7 +732,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>31</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -871,9 +872,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "33",
                  "37",
-                 "41",
+                 "40",
                  "47",
                  "55"
                ]
@@ -883,10 +884,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "46",
+                 "45",
                  "41",
-                 "36",
-                 "31",
+                 "35",
+                 "30",
                  "25"
                ]
              }
