--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 12:05:11 2018</p>
+         Last Run: Thu Jul 19 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -33,8 +33,8 @@
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>55</td>
-                        <td>54</td>
+                        <td>47</td>
+                        <td>51</td>
                         <td>2</td>
                         <td>13</td>
                         <td>SSE</td>
@@ -42,35 +42,35 @@
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Mostly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>23</td>
-                        <td>54</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>45</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSE</td>
-                        <td>79</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>15</td>
-                        <td>53</td>
+                        <td>16</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
-                        <td>71</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>8</td>
-                        <td>55</td>
+                        <td>7</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -120,7 +120,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "21",
+                 "22",
                  "21",
                  "21"
                ]
@@ -132,7 +132,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "21",
+                 "22",
                  "21",
                  "21"
                ]
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "55",
-                 "23",
-                 "15",
-                 "8"
+                 "47",
+                 "45",
+                 "16",
+                 "7"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "54",
-                 "53",
-                 "55"
+                 "51",
+                 "50",
+                 "51",
+                 "53"
                ]
              },
              {
@@ -209,8 +209,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "87",
-                 "79",
-                 "71",
+                 "83",
+                 "73",
                  "51"
                ]
              }
@@ -229,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 12:05:11 2018</p>
+         Last Run: Thu Jul 19 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -254,10 +254,10 @@
                         <td>17</td>
                         <td>17</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>3</td>
-                        <td>10</td>
-                        <td>SW</td>
+                        <td>8</td>
+                        <td>WSW</td>
                         <td>5</td>
                      </tr>
                      <tr>
@@ -278,9 +278,9 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>6</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>3</td>
                      </tr>
@@ -292,9 +292,9 @@
                         <td>15</td>
                         <td>29</td>
                         <td>7</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>35</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -306,7 +306,7 @@
                         <td>7</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>40</td>
+                        <td>42</td>
                      </tr>
                   </tbody>
                </table>
@@ -434,9 +434,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
+                 "43",
                  "38",
-                 "33",
+                 "32",
                  "29",
                  "27"
                ]
@@ -449,8 +449,8 @@
                  "5",
                  "4",
                  "3",
-                 "35",
-                 "40"
+                 "37",
+                 "42"
                ]
              }
            ]
@@ -467,7 +467,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 12:05:11 2018</p>
+         Last Run: Thu Jul 19 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -492,7 +492,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>1</td>
                         <td>14</td>
                         <td>SE</td>
@@ -501,26 +501,26 @@
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>37</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
-                        <td>18</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>2</td>
-                        <td>46</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>3</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>21</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -565,8 +565,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "23",
-                 "21",
-                 "19"
+                 "22",
+                 "20"
                ]
              },
              {
@@ -576,8 +576,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "23",
-                 "21",
-                 "19"
+                 "22",
+                 "20"
                ]
              }
            ]
@@ -630,7 +630,7 @@
                "data":[
                  "0",
                  "0",
-                 "2"
+                 "3"
                ]
              },
              {
@@ -638,9 +638,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
-                 "39",
-                 "46"
+                 "33",
+                 "37",
+                 "45"
                ]
              },
              {
@@ -649,8 +649,8 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "18",
-                 "21"
+                 "12",
+                 "10"
                ]
              }
            ]
@@ -667,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 12:05:11 2018</p>
+         Last Run: Thu Jul 19 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -692,7 +692,7 @@
                         <td>25</td>
                         <td>25</td>
                         <td>2</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SSE</td>
@@ -716,7 +716,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>4</td>
-                        <td>40</td>
+                        <td>41</td>
                         <td>0</td>
                         <td>13</td>
                         <td>SE</td>
@@ -872,9 +872,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
+                 "34",
                  "37",
-                 "40",
+                 "41",
                  "47",
                  "55"
                ]
