--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 13:05:04 2018</p>
+         Last Run: Thu Jul 19 14:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - Central Memorial High School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 19, 2018 -  6:00PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -31,24 +31,24 @@
                      <tr>
                         <td>05:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>47</td>
-                        <td>51</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>49</td>
+                        <td>46</td>
                         <td>2</td>
-                        <td>13</td>
+                        <td>16</td>
                         <td>SSE</td>
-                        <td>87</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>45</td>
+                        <td>44</td>
                         <td>50</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>SSE</td>
                         <td>83</td>
                      </tr>
@@ -57,8 +57,8 @@
                         <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>16</td>
-                        <td>51</td>
+                        <td>24</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>13</td>
                         <td>SE</td>
@@ -69,12 +69,12 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>7</td>
-                        <td>53</td>
+                        <td>9</td>
+                        <td>52</td>
                         <td>0</td>
-                        <td>11</td>
-                        <td>ESE</td>
-                        <td>51</td>
+                        <td>13</td>
+                        <td>SE</td>
+                        <td>54</td>
                      </tr>
                   </tbody>
                </table>
@@ -119,7 +119,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "23",
                  "22",
                  "21",
                  "21"
@@ -131,7 +131,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "23",
                  "22",
                  "21",
                  "21"
@@ -186,10 +186,10 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "47",
-                 "45",
-                 "16",
-                 "7"
+                 "49",
+                 "44",
+                 "24",
+                 "9"
                ]
              },
              {
@@ -197,10 +197,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
+                 "46",
                  "50",
-                 "51",
-                 "53"
+                 "50",
+                 "52"
                ]
              },
              {
@@ -208,10 +208,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "87",
+                 "83",
                  "83",
                  "73",
-                 "51"
+                 "54"
                ]
              }
            ]
@@ -229,7 +229,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 13:05:04 2018</p>
+         Last Run: Thu Jul 19 14:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -467,7 +467,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 13:05:04 2018</p>
+         Last Run: Thu Jul 19 14:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -492,10 +492,10 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>34</td>
                         <td>1</td>
                         <td>14</td>
-                        <td>SE</td>
+                        <td>ESE</td>
                         <td>15</td>
                      </tr>
                      <tr>
@@ -504,7 +504,7 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>14</td>
                         <td>ESE</td>
@@ -520,7 +520,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>10</td>
+                        <td>11</td>
                      </tr>
                   </tbody>
                </table>
@@ -638,8 +638,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "33",
-                 "37",
+                 "34",
+                 "38",
                  "45"
                ]
              },
@@ -650,7 +650,7 @@
                "data":[
                  "15",
                  "12",
-                 "10"
+                 "11"
                ]
              }
            ]
@@ -667,7 +667,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Jul 19 13:05:04 2018</p>
+         Last Run: Thu Jul 19 14:05:14 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -689,62 +689,62 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>35</td>
                         <td>2</td>
-                        <td>34</td>
-                        <td>2</td>
-                        <td>11</td>
-                        <td>SSE</td>
-                        <td>45</td>
+                        <td>13</td>
+                        <td>SE</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>3</td>
-                        <td>37</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>18</td>
+                        <td>39</td>
                         <td>1</td>
-                        <td>13</td>
-                        <td>SSE</td>
-                        <td>41</td>
+                        <td>14</td>
+                        <td>SE</td>
+                        <td>45</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
-                        <td>4</td>
-                        <td>41</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>7</td>
+                        <td>43</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SE</td>
-                        <td>35</td>
+                        <td>ESE</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>8</td>
-                        <td>47</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>9</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>E</td>
-                        <td>30</td>
+                        <td>ENE</td>
+                        <td>49</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>9</td>
-                        <td>55</td>
+                        <td>Chance of Rain</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>31</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>25</td>
+                        <td>ENE</td>
+                        <td>44</td>
                      </tr>
                   </tbody>
                </table>
@@ -790,11 +790,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
                  "24",
                  "23",
-                 "21",
-                 "19"
+                 "22",
+                 "20",
+                 "18"
                ]
              },
              {
@@ -803,11 +803,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
                  "24",
                  "23",
-                 "21",
-                 "19"
+                 "22",
+                 "20",
+                 "18"
                ]
              }
            ]
@@ -860,11 +860,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "3",
-                 "4",
-                 "8",
-                 "9"
+                 "24",
+                 "18",
+                 "7",
+                 "9",
+                 "31"
                ]
              },
              {
@@ -872,11 +872,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
-                 "37",
-                 "41",
-                 "47",
-                 "55"
+                 "35",
+                 "39",
+                 "43",
+                 "50",
+                 "58"
                ]
              },
              {
@@ -884,11 +884,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
+                 "39",
                  "45",
-                 "41",
-                 "35",
-                 "30",
-                 "25"
+                 "49",
+                 "49",
+                 "44"
                ]
              }
            ]
